syntax = "proto3";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
  string id = 1;
}
message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}
message CreateUserRequest {
  string name = 1;
  string email = 2;
}
message CreateUserResponse {
  string id = 1;
  string message = 2;
}
message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}
message UpdateUserResponse {
  string message = 1;
}
message DeleteUserRequest {
  string id = 1;
}
message DeleteUserResponse {
  string message = 1;
}

 

 